<resources>
    <string name="app_name">CipherPipe</string>
    <string name="app_idea">Idea. concept, design: Heinrich Elsigan</string>
    <string name="app_idea_url">https://github.com/heinrichelsigan/PermAgainCrypt/</string>
    <string name="app_code">Code by Heinrich Elsigan (he@area23.at)</string>
    <string name="app_code_url">https://heinrichelsigan.area23.at</string>
    <string name="app_bottom">v2.25.1118 (all rights reserved)</string>
    <string name="version_name">v2.25.1118</string>
    <string name="action_settings">Settings</string>
    <string name="action_start">Start</string>
    <string name="action_load">Load</string>
    <string name="action_save">Save</string>
    <string name="action_options">Options</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="action_layout">Layout</string>
    <string name="action_stop">Stop</string>

    <string name="help_text">Help</string>
    <string name="help_help">QUICK START GUIDE:\nLay stones without color repeating in column and row!\n\nVH: Visual Help\nSM: Size Small\nGA: Game Automation\nS: Sound\nAS: Autosave\nQS: Quicksave</string>
    <string name="build_with">Build with Android Studio 2021.3.1</string>
    <string name="learn_more">Learn more</string>
    <string name="back_button">Back</string>
    <string name="help_uri">https://www.georg-toth.com/supu</string>
	<string name="action_level">Level</string>	
    <string name="next_level">Next level</string>
	
    <string name="replay_level">Replay level</string>
    <string name="replay_current_level">Replay current level</string>
    <string name="string_started">Game started.</string>
    <string name="string_stopped">Game stopped.</string>


    <string name="action_screenshot">Screenshot</string>
    <string name="string_notstarted">Game isn\'t started, click start in main menu.</string>
    <string name="level_current">LevelCurrent</string>
    <string name="msg_perfect">Perfect</string>
    <string name="msg_gameOver">Game Over</string>
    <string name="msg_levelCompleted">Level completed!</string>
    <string name="warnOnEmptyPipe" translatable="false">warn on empty pipe</string>
    <string name="warnOnDoubleZip" translatable="false">warn on double zip</string>

    <string name="setPipe" translatable="false">set pipe</string>
    <string name="hashPipe" translatable="false">hash pipe</string>
    <string name="encrypt" translatable="false">encrypt</string>
	<string name="decrypt" translatable="false">decrypt</string>
    <string name="reset" translatable="false">reset</string>
    <string name="randText" translatable="false">random text</string>
 	<string name="none" translatable="false" />
	<string name="enter_source_text"  translatable="false">enter text source</string>
	<string name="select_encóding" translatable="false">select encóding</string>
	<string name="show_cipher_pipe" translatable="false">cipher pipe</string>
	<string name="algo_none" translatable="false" />
	<string name="select_algo" translatable="false">select cipher algo</string>
	<string name="select_zip_type" translatable="false">select zip type</string>
	<string name="select_hash" translatable="false">select hash</string>
	<string name="encrypt_key" translatable="false">encrypt key</string>
    <string name="key_hash" translatable="false">key hash</string>
    <string name="default_key" translatable="false">zen@area23.at</string>
	<string name="enter_encrypt_key" translatable="false">enter encrypt key</string>
    <string name="enter_phone_number" translatable="false">enter phone number</string>
    <string name="show_text_destination" translatable="false">show text destination</string>
    <string name="pipe_tooltip" translatable="false">cipher pipe</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="s_row0" translatable="false">row0</string>
    <string name="s_row1" translatable="false">row1</string>
    <string name="s_row2" translatable="false">row2</string>

    <string name="f_a0" translatable="false">a0</string>
    <string name="f_b0" translatable="false">b0</string>
    <string name="f_c0" translatable="false">c0</string>
    <string name="f_d0" translatable="false">d0</string>
    <string name="f_e0" translatable="false">e0</string>
    <string name="f_f0" translatable="false">f0</string>

    <string name="f_a1" translatable="false">a1</string>
    <string name="f_b1" translatable="false">b1</string>
    <string name="f_c1" translatable="false">c1</string>
    <string name="f_d1" translatable="false">d1</string>
    <string name="f_e1" translatable="false">e1</string>
    <string name="f_f1" translatable="false">f1</string>

    <string name="f_a2" translatable="false">a2</string>
    <string name="f_b2" translatable="false">b2</string>
    <string name="f_c2" translatable="false">c2</string>
    <string name="f_d2" translatable="false">d2</string>
    <string name="f_e2" translatable="false">e2</string>
    <string name="f_f2" translatable="false">f2</string>
    
    <string name="f_a3" translatable="false">a3</string>
    <string name="f_b3" translatable="false">b3</string>
    <string name="f_c3" translatable="false">c3</string>
    <string name="f_d3" translatable="false">d3</string>
    <string name="f_e3" translatable="false">e3</string>
    <string name="f_f3" translatable="false">f3</string>

    <string name="f_a4" translatable="false">a4</string>
    <string name="f_b4" translatable="false">b4</string>
    <string name="f_c4" translatable="false">c4</string>
    <string name="f_d4" translatable="false">d4</string>
    <string name="f_e4" translatable="false">e4</string>
    <string name="f_f4" translatable="false">f4</string>
	
</resources>
