<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:layout_marginTop="10dp"
    tools:context=".MainActivity">

	<GridLayout
		android:id="@+id/GridLayoutCipherPipe"
		android:layout_width="400dp"
		android:layout_height="600dp"
		android:columnWidth="200dp"
		android:columnCount="2"
		android:orientation="vertical"
		android:rowCount="6"
		android:stretchMode="columnWidth">

		<LinearLayout
			android:id="@+id/a0"
			android:tag="@string/f_a0"
			android:layout_width="184dp"
			android:layout_height="100dp"
			android:orientation="vertical"
			android:layout_row="0"
			android:layout_column="0">
			<EditText
				android:id="@+id/editEncryptKey"
				android:layout_width="184dp"
				android:layout_height="80dp"
				android:layout_marginTop="8dp"
				android:hint="@string/encrypt_key"
				android:textSize="12sp"
				android:text="@string/default_key"
				android:textColorHint="@color/abc_primary_text_material_dark" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/a1"
			android:tag="@string/f_a1"
			android:layout_width="216dp"
			android:layout_height="100dp"
			android:orientation="vertical"
			android:layout_row="0"
			android:layout_column="1">
			<Spinner
				android:id="@+id/spinnerHash"
				android:layout_width="192dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:hint="@string/select_hash"
				android:textColorHint="@color/abc_primary_text_material_dark"
				android:tooltipText="@string/select_hash" />

		</LinearLayout>
		<LinearLayout
			android:id="@+id/b0"
			android:tag="@string/f_b0"
			android:layout_width="184dp"
			android:layout_height="64dp"
			android:orientation="vertical"
			android:layout_row="1"
			android:layout_column="0">
			<EditText
				android:id="@+id/editKeyHash"
				android:layout_width="184dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:textSize="12sp"
				android:hint="@string/key_hash"
				android:phoneNumber="true"
				android:text="@string/default_key"
				android:textColorHint="@color/abc_primary_text_material_dark" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/b1"
			android:tag="@string/f_b1"
			android:layout_width="215dp"
			android:layout_height="32dp"
			android:orientation="vertical"
			android:layout_row="1"
			android:layout_column="1">
			<Button
                android:id="@+id/btnSetPipe"
                android:layout_width="84dp"
                android:layout_height="32dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1dp"
                android:textSize="10sp"
                android:text="@string/setPipe" />
            <Button
                android:id="@+id/btnHashPipe"
                android:layout_width="84dp"
                android:layout_height="32dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="96dp"
                android:layout_marginTop="-32dp"
                android:textSize="10sp"
                android:text="@string/hashPipe" />
		</LinearLayout>

		<LinearLayout
			android:id="@+id/c0"
			android:tag="@string/f_c0"
			android:layout_width="184dp"
            android:layout_height="48dp"
			android:orientation="vertical"
			android:layout_row="2"
			android:layout_column="0">
			<Spinner
				android:id="@+id/spinnerEncode"
				android:layout_width="168dp"
				android:layout_height="336dp"
				android:layout_marginTop="1dp"
				android:hint="@string/select_encóding"
				android:textColorHint="@color/abc_primary_text_material_dark"
				android:tooltipText="@string/select_encóding" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/c1"
			android:tag="@string/f_c1"
			android:layout_width="216dp"
			android:layout_height="48dp"
			android:orientation="vertical"
			android:layout_row="2"
			android:layout_column="1">

			<Spinner
				android:id="@+id/spinnerZip"
				android:layout_width="168dp"
				android:layout_height="36dp"
				android:layout_marginTop="2dp"
				android:hint="@string/select_zip_type"
				android:textColorHint="@color/abc_primary_text_material_dark"
				android:tooltipText="@string/select_zip_type" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/d0"
			android:tag="@string/f_d0"
			android:layout_width="184dp"
			android:layout_height="60dp"
			android:orientation="vertical"
			android:layout_row="3"
			android:layout_column="0">
			<Spinner
				android:id="@+id/spinnerAlgos"
				android:layout_width="180dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:hint="@string/select_algo"
				android:textColorHint="@color/abc_primary_text_material_dark"
				android:tooltipText="@string/select_algo" />
		</LinearLayout>

		<LinearLayout
			android:id="@+id/d1"
			android:tag="@string/f_d1"
			android:layout_width="216dp"
			android:layout_height="60dp"
			android:orientation="vertical"
			android:layout_row="3"
			android:layout_column="1">
			<EditText
				android:id="@+id/showCipherPipe"
				android:layout_width="216dp"
				android:layout_height="64dp"
				android:layout_marginTop="1dp"
				android:hint="@string/show_cipher_pipe"
                android:tooltipText="@string/pipe_tooltip"
                android:textSize="9sp"
				android:text="@string/algo_none"
				android:textColorHint="@color/abc_primary_text_material_dark" />

		</LinearLayout>



		<LinearLayout
			android:id="@+id/e0"
			android:tag="@string/f_e0"
			android:layout_width="184dp"
			android:layout_height="40dp"
			android:orientation="vertical"
			android:layout_row="4"
			android:layout_column="0">
			<Button
				android:id="@+id/btnEncrypt"
				android:layout_width="84dp"
				android:layout_height="32dp"
				android:layout_marginTop="4dp"
				android:textSize="10sp"
				android:text="@string/encrypt" />
            <Button
                android:id="@+id/btnDecrypt"
                android:layout_width="84dp"
                android:layout_height="32dp"
                android:layout_centerHorizontal="true"
                android:textSize="10sp"
                android:layout_marginLeft="96dp"
                android:layout_marginTop="-33dp"
                android:text="@string/decrypt" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/e1"
			android:tag="@string/f_e1"
			android:layout_width="200dp"
			android:layout_height="40dp"
			android:orientation="vertical"
			android:layout_row="4"
			android:layout_column="1">
            <Button
                android:id="@+id/btnReset"
                android:layout_width="84dp"
                android:layout_height="32dp"
                android:layout_centerHorizontal="true"
                android:textSize="10sp"
                android:layout_marginLeft="108dp"
                android:layout_marginTop="4dp"
                android:text="@string/reset" />
            <Button
                android:id="@+id/btnRandText"
                android:layout_width="96dp"
                android:layout_height="32dp"
                android:layout_centerHorizontal="true"
                android:textSize="8sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="-32dp"
                android:text="@string/randText" />

		</LinearLayout>
		<LinearLayout
			android:id="@+id/f0"
			android:tag="@string/f_f0"
			android:layout_width="200dp"
			android:layout_height="144dp"
			android:orientation="vertical"
			android:layout_row="5"
			android:layout_column="0">
			<EditText
				android:id="@+id/editTextSource"
				android:layout_width="200dp"
				android:layout_height="144dp"
				android:layout_marginTop="2dp"
				android:textSize="9sp"
				android:hint="@string/enter_source_text"
				android:text="@string/none"
				android:textColorHint="@color/abc_primary_text_material_dark" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/f1"
			android:tag="@string/f_f1"
			android:layout_width="200dp"
			android:layout_height="144dp"
			android:orientation="vertical"
			android:layout_row="5"
			android:layout_column="1">

             <EditText
                android:id="@+id/showTextDestination"
			 	android:layout_width="200dp"
			 	android:layout_height="144dp"
			 	android:textSize="9sp"
                android:layout_marginTop="2dp"
                android:hint="@string/show_text_destination"
                android:text="@string/none"
                android:textColorHint="@color/abc_primary_text_material_dark" />
		</LinearLayout>

	</GridLayout>

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</androidx.constraintlayout.widget.ConstraintLayout>